Fixed Navbar spacing across multiple devices

--- a/dev/css/styles.css
+++ b/dev/css/styles.css
@@ -362,7 +362,8 @@ form .button-wrapper {
     display: table-cell;
     position: relative;
     float: left;
-    width: 100%; }
+    width: 100%;
+    padding-left: 0px; }
   #navbar .nav {
     display: table-row; }
     @media (max-width: 767px) {
@@ -371,21 +372,19 @@ form .button-wrapper {
       #navbar .nav .navi, #navbar .nav #mobileNav {
         display: none; } }
     @media (min-width: 768px) {
+      #navbar .nav .navi {
+        padding-right: 12px;
+        padding-left: 12px; }
       #navbar .nav .menu {
         display: none !important; } }
-    #navbar .nav #home a {
-      padding-left: 0px !important; }
     #navbar .nav #home img {
       height: 90px;
       position: relative;
       display: inline-block;
-      padding-top: 10px;
-      padding-bottom: 10px;
+      padding: 10px;
       padding-left: 0px !important; }
     #navbar .nav div, #navbar .nav a.menu {
       display: table-cell;
-      padding-right: 12px;
-      padding-left: 12px;
       text-align: center; }
       #navbar .nav div li, #navbar .nav a.menu li {
         padding: 0px; }
