--- a/dev/sass/components/general/_navbar.scss
+++ b/dev/sass/components/general/_navbar.scss
@@ -20,6 +20,7 @@
     position: relative;
     float: left;
     width: 100%;
+    padding-left: 0px;
   }
 
 
@@ -37,6 +38,11 @@
     }
 
     @media (min-width: 768px) {
+      .navi {
+        padding-right: $nav-items-padding;
+        padding-left: $nav-items-padding;
+      }
+
       .menu {
         display: none !important;
       }
@@ -49,16 +55,14 @@
         height: 90px;
         position: relative;
         display: inline-block;
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding: 10px;
         padding-left: 0px !important;
       }
     }
 
     div, a.menu {
       display: table-cell;
-      padding-right: $nav-items-padding;
-      padding-left: $nav-items-padding;
+
       text-align: center;
 
       li {
